<resources>
    <!-- Facebook Strings-->
    <string name="facebook_app_id">315099896560705</string>
    <string name="fb_login_protocol_scheme">fb315099896560705</string>

    <string name="app_name">Lab4Moviles</string>
    <string name="nombreUsuario">NombreUsuario</string>
    <string name="fecha">Fecha</string>
    <string name="cantComentarios">Número de comentarios</string>
    <string name="descripcion">Descripción</string>
    <string name="verMas">Ver más</string>
    <string name="agregarComentario">Agregar Comentario</string>
    <string name="comentarios">Comentarios</string>
    <string name="ningunComentario">Aún no hay ningún comentario</string>
    <string name="comentarioInfo">nombreUsuario - Fecha</string>
    <string name="seleccionarFoto">Seleccionar Foto</string>
    <string name="textoBienvenido">¡Bienvenido a Lab4Moviles!</string>
</resources>