<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/txtMainUsername_Detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/nombreUsuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgPublicacion_Detalles"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPublicacion_Detalles"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMainUsername_Detalles"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtMainFecha_Detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/fecha"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgPublicacion_Detalles"
        app:layout_constraintTop_toBottomOf="@+id/imgPublicacion_Detalles" />

    <TextView
        android:id="@+id/txtMainComments_Detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cantComentarios"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtMainFecha_Detalles"
        app:layout_constraintStart_toEndOf="@+id/txtMainFecha_Detalles"
        app:layout_constraintTop_toTopOf="@+id/txtMainFecha_Detalles"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtMainDescription_Detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="5"
        android:text="@string/descripcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/txtMainFecha_Detalles"
        app:layout_constraintTop_toBottomOf="@+id/txtMainFecha_Detalles" />

    <Button
        android:id="@+id/buttonAddComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/agregarComentario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/comentarios"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgPublicacion_Detalles"
        app:layout_constraintTop_toBottomOf="@+id/txtMainDescription_Detalles" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddComment"
        app:layout_constraintEnd_toEndOf="@+id/imgPublicacion_Detalles"
        app:layout_constraintStart_toStartOf="@+id/imgPublicacion_Detalles"
        app:layout_constraintTop_toBottomOf="@+id/txtNoComments" />

    <TextView
        android:id="@+id/txtNoComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ningunComentario"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>