<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtMainUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/nombreUsuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgPublicacion"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPublicacion"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMainUsername"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtMainFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/fecha"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgPublicacion"
        app:layout_constraintTop_toBottomOf="@+id/imgPublicacion" />

    <TextView
        android:id="@+id/txtMainComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cantComentarios"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtMainFecha"
        app:layout_constraintStart_toEndOf="@+id/txtMainFecha"
        app:layout_constraintTop_toTopOf="@+id/txtMainFecha"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtMainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="5"
        android:text="@string/descripcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/txtMainFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtMainFecha" />

    <Button
        android:id="@+id/buttonVerMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/verMas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgPublicacion"
        app:layout_constraintTop_toBottomOf="@+id/txtMainDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
